--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-title: My Site
-description: My first Jekyll site on GitHub Pages
-theme: Tactile   # or another supported theme
+remote_theme: pages-themes/cayman@v0.2.0
+plugins:
+  - jekyll-remote-theme
